--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@
 
       <div class="search-results">
         <ul class="results">
+          <a href="#5ed6604591c37cdc054bc90b">RECIPE 1</a>
+          <a href="#5ed6604591c37cdc054bc886">RECIPE 2</a>
           <!-- 
           <li class="preview">
             <a class="preview__link preview__link--active" href="#23456">
@@ -140,7 +142,7 @@
               <use href="src/img/icons.svg#icon-smile"></use>
             </svg>
           </div>
-          <p>Start by searching for a recipe or an ingredient. Have fun!</p>
+          <p>😄 Start by searching for a recipe or an ingredient. Have fun!</p>
         </div>
 
         <!-- <div class="spinner">
